  items remains constant.

- Several improvements in processing data output of the inferior debugger:
  * Many more data formats are recognized.
  * Trailing data is no longer ignored.
  * C++ base classes as reported by AIX DBX are interpreted correctly.
  * Value changes in status displays are flagged more precisely.
  * Creating and updating data displays uses a common code base.

- `Set ()' dialog improvements:
  * You can now set structs as a whole.
  * A drop down selection of previously set values is available.
  * Invalid values cause the dialog to remain open.

- Typed aliases.  DDD now requires structural equivalence for aliases.
  This means that two displays are only considered aliases if they are
  at the same address _and_ have the same type.  See the
  `typedAliases' resource for a discussion.

- When DDD creates a new dependent display, it copies the selection
  state from the originating display.  This way, you can easily unfold
  linked elements simply by clicking `Disp *' again and again.

- Anonymous unions are no longer prefixed by `='.

- `Examine Memory' also works for Solaris DBX.


Source exploration
------------------

- Double-clicking on a function call (that is, an identifier followed
  by a `(' character) will lead you to the function definition.

- Dragging breakpoints works nicely with scrolling.


Printing
--------

- Arc edges are now included in PostScript and FIG output.

- The default setting for printing is to print all displays.


Platforms
---------

- You can build DDD out-of-the box on Windows 95 and NT (using
  cygwin32, http://www.cygnus.com/misc/gnu-win32/).  This is useful
  for people using GCC and GDB on Windows, or for people using DDD as
  a front-end to JDB.  A Windows X server is required.


Customization
-------------

- History customization.  You can customize the number of items in
  pop-down value histories as well as the way they are sorted.  See
  the `popdownHistorySize' and `sortPopdownHistory' resources.